--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "smart-ws-server",
   "version": "1.0.0",
+  "description": "Smart WebSocket Server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.13.0"
+    "ws": "^8.16.0"
   }
 }
